fix: Adjusted layout Navigation Item for Cart to better align with the other items

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -194,8 +194,17 @@ li:active:has(> div > .navContent:focus-visible) {
     }
 }
 
-.navCart > .navContent {
+.navCart .navContent {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    width: max-content;
+
+    span {
+        vertical-align: middle;
+    }
 }
 
 .navCart:hover,
@@ -246,7 +255,7 @@ li:active:has(> div > .navContent:focus-visible) {
 .cartNumber {
     display: inline-flex;
 
-    width: 28px;
+    width: 24px;
     aspect-ratio: 1/1;
 
     padding: 0px;
@@ -259,8 +268,6 @@ li:active:has(> div > .navContent:focus-visible) {
     text-align: center;
 
     background-color: sandybrown;
-
-    /*transform: translateY(-1px);*/
 
     transition: background-color 250ms ease-in-out;
 }
